﻿----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2005-02-04 Michal Čihař  <michal@cihar.com>
    * tbl_change.php: Fix TIMESTAMP editing on MySQL 4.1 (bug #1114120).

2005-02-03 Alexander M. Turek  <me@derrabus.de>
    * tbl_addfield.php: Bug #1040682 (adding field with collation).

2005-02-02 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/dbi/*: PMA_DBI_num_rows(): do not send a boolean
      to mysqli_num_rows() or mysql_num_row(), it expects a result resource 
    * tbl_properties.inc.php: bug #1114550, changing the type of 
      a float unsigned column

2005-01-30 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/export/sql.php: bug #1108521, part 2: mysqli_num_rows
      cannot be used with MYSQL_USE_RESULT

2005-01-29 Alexander M. Turek  <me@derrabus.de>
    * lang/japanese-utf-8.inc.php: Bug #1111855 ("Undefined index" when using
      the Janapese language file under MySQL 4.1.

2005-01-28 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/dbi/mysqli.dbi.lib.php: bug #1111706, call to undefined
      function PMA_reloadNavigation(). A failed connection was not properly
      detected
    * libraries/export/sql.php: bug #1108521, mysqli_free_result() expects
      parameter 1 to be a result

2005-01-27 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/fpdf/fpdf.php: bug #1106146, missing header for PDF,
      thanks to Michal
    * libraries/display_tbl.lib.php: the LongOperation message should
      be just for InnoDB

2005-01-27 Michal Čihař  <michal@cihar.com>
    * read_dump.php: Fix detection of SELECT query to display on multiple
      submits (bug #1110727).

2005-01-23 Marc Delisle  <lem9@users.sourceforge.net>
    * tbl_query_box.php: bug #1107937, undefined $fields_list
    * lang/estonian: Update thanks to Alvar Soome - finsoft.
    ### 2.6.1 released

2005-01-23 Michal Čihař  <michal@cihar.com>
    * export.php: Back to Content-Type application/x-bzip2 on bzip2 export